--- a/Assets/ABSystem/Editor/absystem.editor.asmdef
+++ b/Assets/ABSystem/Editor/absystem.editor.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "GUID:5fb14cb69d6be474f962b9083e2ef797"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
